# lucky

./: .drone.star  .drone.yml  .gitignore  .gitmodules  .nuspec  404.html  Cargo.toml  LICENSE  NOTICES  README.md  VERIFICATION.md  bors.toml  build.rs  design.html  development.html  getting-started.html  index.html  overview.html  print.html  searchindex.js  searchindex.json  snapcraft.yaml  test.txt
.github/: dependabot.yml
charm_template/: .ffizer.yaml  README.md  README.md.hbs  config.yaml  lucky.yaml  lucky.yml  metadata.yaml.ffizer.hbs
charm_template/container_scripts/: configure.sh  update-container-config.sh
charm_template/host_scripts/: README.md  install.sh  update-config.sh
chocolatey/: .gitignore  lucky.nuspec
chocolatey/legal/: LICENSE.txt
cli/: lucky.html
cli/lucky/: charm.html  client.html  daemon.html
cli/lucky/charm/: build.html  create.html
cli/lucky/client/: container.html  get-config.html  get-resource.html  kv.html  leader.html  port.html  private-address.html  public-address.html  random.html  relation.html  set-status.html
cli/lucky/client/container/: apply-updates.html  apply.html  delete.html  env.html  image.html  port.html  set-command.html  set-entrypoint.html  set-network.html  volume.html
cli/lucky/client/container/env/: delete.html  get.html  set.html
cli/lucky/client/container/image/: get.html  set.html
cli/lucky/client/container/port/: add.html  get.html  list.html  remove.html
cli/lucky/client/container/volume/: add.html  get.html  remove.html
cli/lucky/client/kv/: delete.html  get.html  set.html
cli/lucky/client/leader/: get.html  is-leader.html  set.html
cli/lucky/client/port/: close.html  get-opened.html  open.html
cli/lucky/client/relation/: get.html  list-ids.html  list-relations.html  list-units.html  set.html
cli/lucky/daemon/: start.html  stop.html  trigger-hook.html
codimd-example-charm/: config.yaml  lucky.yaml
codimd-example-charm/host_scripts/: configure.sh  handle-website-relation.sh
docs/book/: .gitignore  book.toml
docs/book/src/: SUMMARY.md  design.md  development.md  getting-started.md  overview.md
docs/book/src/assets/: README.md
docs/book/src/codimd-example-charm/: README.md  config.yaml  metadata.yaml
docs/book/src/codimd-example-charm/container_scripts/: README.md
docs/book/src/codimd-example-charm/host_scripts/: configure.sh  handle-database-relation.sh  handle-website-relation.sh  install.sh
docs/book/src/lucky-development/: design.md  index.md
lucky-development/: building.html  design.html  index.html
src/: cli.rs  config.rs  daemon.rs  docker.rs  error.rs  juju.rs  lib.rs  log.rs  macros.rs  main.rs  process.rs  rpc.rs  rt.rs  types.rs
src/cli/: bighelp.rs  charm.rs  cli.md  client.rs  daemon.rs  doc.rs  help.txt  lucky.md  types.rs  util.rs
src/cli/charm/: build.rs  charm.md  create.md  create.rs
src/cli/charm/create/: create.md
src/cli/cli_help/: lucky_client.md
src/cli/client/: container.rs  get_config.rs  get_resource.rs  kv.rs  leader.rs  port.rs  private_address.rs  public_address.rs  random.rs  relation.rs  set_status.rs
src/cli/client/cli_help/: container.md  get_config.md  get_resource.md  kv_get.md  kv_set.md  leader.md  port.md  private_address.md  public_address.md  random.md  relation.md
src/cli/client/container/: apply.rs  apply_updates.rs  delete.rs  env.rs  image.rs  port.rs  set_command.rs  set_entrypoint.rs  set_network.rs  volume.rs
src/cli/client/container/cli_help/: apply_updates.md  delete.md  env.md  image.md  port.md  set_command.md  set_entrypoint.md  set_network.md  volume.md
src/cli/client/doc/: container.md  kv.md  set-status.md
src/cli/daemon/: cron_tick.rs  daemon.md  exit_code_helper.rs  run_hook.rs  start.rs  stop.rs  trigger_hook.rs
src/cli/doc/: after_help.txt  cmdln_pager.rs  long_help.txt  mdbook.rs
src/cli/doc/cmdln_pager/: pager_help.md
src/daemon/: .gitignore  hook_handlers.rs  lucky.rpc.varlink  lucky_rpc_err_impl.rs  tools.rs  types.rs
src/docker/: types.rs
src/juju/: types.rs
src/rpc/: .gitignore  lucky.rpc.varlink  lucky_rpc.rs  lucky_rpc_err_impl.rs
src/types/: juju.rs  lucky.rs
