[package]
name = "lucky"
version = "0.1.0-alpha.1"
authors = ["Katharos Technology"]
edition = "2018"
license-file = "LICENSE"
description = "The Lucky charming framework for Juju"
homepage = "https://github.com/katharostech/lucky"
readme = "README.md"
documentation = "https://katharostech.github.io/lucky"
repository = "https://github.com/katharostech/lucky"
keywords = ["juju", "charm", "development", "devops"]
categories = ["command-line-utilities"]

[dependencies]
# Use Clap v3.0.0-beta.1
clap = { git = "https://github.com/clap-rs/clap.git", rev="92c2b5d", features = ["wrap_help"] }
zip = { version = "0.5.8", features = ["bzip2"], default-features = false }
# TODO: I think handlebars is overkill for our use-case. We can probably refactor it out with
# something lighter weight.
handlebars = "3.0.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_derive = "1.0.0"
better-panic = { version = "0.2.0", optional = true }
# This is a very small lib that could be removed if we wanted to implement it ourselves for some
# reason.
rprompt = "1.0.0"
termimad = "0.8.16"
minimad = "0.6.7"
crossterm = "0.16.0"
atty = "0.2.0"
anyhow = "1.0.33"
dirs = "2.0.0"
serde_json = "1.0.59"
lazy_static = "1.4.0"
walkdir = "2.2.0"
serde_yaml = "0.8.0"
varlink = { git = "https://github.com/varlink/rust.git", rev = "04b2a5a" }
ctrlc = { version = "3.1", features = ["termination"] }
log = "0.4.0"
strum = "0.19.5"
strum_macros = "0.16.0"
subprocess = "0.1.0"
thiserror = "1.0.22"
regex = "1.3.0"
shiplift =  { version = "0.6.0", default-features = false, features = ["chrono", "unix-socket"], optional = true }
tokio = { version = "0.1.22", optional = true }
futures = { version = "0.1.29", optional = true }
function_name = "0.2.0"
shrinkwraprs = "0.3.0"
rand = { version = "0.7.3", default-features = false }
# Super small dependency for getting available port
get-port = "1.3.1"
cron = "0.7.0"
chrono = "0.4.19"
crossbeam = "0.7.3"
indexmap = { version = "1.6.0", features = ["serde-1"] }

[features]
default = ["better-panic", "daemon"]
doc-gen = []
daemon = ["shiplift", "tokio", "futures"]

# The `default_devkit` feature enables the default features used when building Lucky for the charm
# developer. To build for the charm developer you should run
# `cargo build --release --no-default-features --features default_devkit`
default_devkit = ["better-panic"]

[build-dependencies]
regex = "1.3"
zip = { version = "0.5", features = ["bzip2"], default-features = false }
walkdir = "2.2"
varlink_generator = "9.0"
git-version = "0.3.0"

# Speed up development builds by not including debug info. Comment this out if you need the debug
# symbols.
[profile.dev]
debug = false

[replace]
# TODO: Remove once this gets release: https://github.com/crossterm-rs/crossterm/pull/383
"crossterm:0.16.0" = { git = "https://github.com/crossterm-rs/crossterm.git", rev = "33b90c8" }